Tensorflow running as a background service